--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Bashour Atrinis' portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/creative-logo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200&family=Titillium+Web:ital,wght@0,200;0,400;0,600;0,900;1,200;1,300&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
