--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/creative_logo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/web-dude-white.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Bashour Atrinis' portfolio" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/creative-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/web-dude-white.webp" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bashour's Portfolio</title>
+    <title>Bashour Atrini's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
